--- a/FaPA/GUI/Design/Templates/DatiGenerali.xaml
+++ b/FaPA/GUI/Design/Templates/DatiGenerali.xaml
@@ -61,10 +61,12 @@
 
                 <TabItem Header="Trasporto" Style="{StaticResource SubTabItemStyle}"
                          DataContext="{Binding DatiTrasportoViewModel}">
-
-                    <ScrollViewer>
                     
                     <Grid Margin="2,2,2,2" >
+                        
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
 
                             <t:InstanceNullManager Grid.Row="0" Grid.ColumnSpan="2"
                                                BindedInstance="{Binding CurrentPoco, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"
@@ -72,6 +74,8 @@
                                                ActionCommandMessage="Aggiungi una scheda dati trasporto"
                                                OnNullCommand="{Binding AddItemCommand}"
                                                ActionCommandParam="DatiTrasporto"/>
+                        
+                        <ScrollViewer>
 
                             <Grid Margin="2,2,2,2"  Grid.Row="0"
                                   Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
@@ -94,8 +98,7 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
                             <StackPanel  Grid.Row="0" Grid.Column="0" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Left" MinWidth="200">
@@ -110,14 +113,14 @@
                                            MaxLength="100" Margin="2,0,2,0"/>
                             </StackPanel>
 
-                            <StackPanel  Grid.Row="0" Grid.Column="3" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Left" MinWidth="200">
+                            <StackPanel  Grid.Row="0" Grid.Column="2" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Left" MinWidth="200">
                                 <TextBlock Text="Numero colli" />
                                 <TextBox   Text="{Binding CurrentPoco.NumeroColli, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
                                            MaxLength="04" Margin="2,0,2,0"/>
                             </StackPanel>
 
                             <StackPanel  Grid.Row="1" Grid.Column="0" Margin="2,0,2,0" Width="Auto"  
-                                     HorizontalAlignment="Stretch" MinWidth="200" Grid.ColumnSpan="4">
+                                     HorizontalAlignment="Stretch" MinWidth="200" Grid.ColumnSpan="3">
                                 <TextBlock Text="Descrizione" />
                                 <TextBox   Text="{Binding CurrentPoco.Descrizione, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
                                            MaxLength="100" Margin="2,0,2,0"/>
@@ -159,14 +162,14 @@
                                            Margin="2,0,2,0"/>
                             </StackPanel>
 
-                            <StackPanel  Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" Margin="2,0,2,0" Width="Auto" 
+                            <StackPanel  Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="2,0,2,0" Width="Auto" 
                                          HorizontalAlignment="Stretch" MinWidth="200">
                                 <TextBlock Text="Tipo resa" />
                                 <TextBox   Text="{Binding CurrentPoco.TipoResa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
                                            MaxLength="3" Margin="2,0,2,0"/>
                             </StackPanel>
 
-                                <GroupBox Header="Anagrafica vettore" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Margin="2,2,2,2" Padding="2,2,2,2">
+                                <GroupBox Header="Anagrafica vettore" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Margin="2,2,2,2" Padding="2,2,2,2">
                                     <Expander  Header="Anagrafica vettore" IsExpanded="False" >
 
                                         <Border BorderThickness="1" Margin="2,2,2,2" Padding="2,2,2,2" >
@@ -194,7 +197,7 @@
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="Auto"/>
                                                         <ColumnDefinition Width="Auto"/>
-                                                        <ColumnDefinition Width="Auto"/>
+                                                        <ColumnDefinition Width="*"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <StackPanel  Grid.Row="0" Grid.Column="0" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Stretch" MinWidth="200">
@@ -254,7 +257,7 @@
                                 </GroupBox>
 
                                 <GroupBox Header="Indirizzo resa" 
-                                          Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" 
+                                          Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" 
                                           Margin="2,5,2,2" Padding="2,2,2,2" Width="Auto">
 
                                     <Expander Header="Indirizzo resa" MinWidth="200">
@@ -334,15 +337,14 @@
 
                                 </GroupBox>
 
-                                <t:SaveCancelRemoveButtons Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Left"
+                                <t:SaveCancelRemoveButtons Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left"
                                                     Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}"
                                                     DeleteEntityCommand="{Binding DeleteEntityCommand}"
                                                     SaveCommand="{Binding SaveEntity}"
                                                     PerformCancelCommand="{Binding PerformCancel}"/>
                             </Grid>
+                        </ScrollViewer>
                     </Grid>
-                        
-                    </ScrollViewer>
            
                 </TabItem>
 
