--- a/FaPA/GUI/Design/Templates/DatiDocumentiCorrelati.xaml
+++ b/FaPA/GUI/Design/Templates/DatiDocumentiCorrelati.xaml
@@ -26,6 +26,7 @@
                     <Grid Margin="2,2,2,2">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
@@ -49,7 +50,7 @@
 
                         <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
                             <TextBlock Text="NumItem" />
-                            <TextBox   Text="{Binding NumItem, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                            <TextBox   Text="{Binding CurrentPoco.NumItem, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
                         </StackPanel>
 
                         <StackPanel Grid.Row="0" Grid.Column="2" Margin="2,0,2,0" Width="25">
@@ -69,7 +70,16 @@
 
                         <StackPanel Grid.Row="0" Grid.Column="5" Margin="2,0,2,0">
                             <TextBlock Text="Data" />
-                            <TextBox   Text="{Binding Data, Mode=TwoWay, StringFormat='{}{0:d}', ValidatesOnDataErrors=True, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True}" HorizontalAlignment="Stretch"/>
+                            <TextBox   Text="{Binding CurrentPoco.Data, Mode=TwoWay, StringFormat='{}{0:d}', ValidatesOnDataErrors=True, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True}" HorizontalAlignment="Stretch"/>
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="6" Margin="2,0,2,0">
+                            <TextBlock Text="Riferimento linea dettaglio fattura" />
+                            <TextBox   Text="{Binding CurrentPoco.RiferimentoNumeroLinea, Mode=TwoWay, 
+                                                      Converter={StaticResource StringArrayConverter}, 
+                                                      ValidatesOnDataErrors=True, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True}" 
+                                       ToolTip="Separare i numeri di linea dettaglio da una virgola. Lasciare vuoto se riferito a tutta la fattura"
+                                       HorizontalAlignment="Stretch"/>
                         </StackPanel>
 
                     </Grid>
