--- a/FaPA/GUI/Design/Templates/DatiDocumento.xaml
+++ b/FaPA/GUI/Design/Templates/DatiDocumento.xaml
@@ -18,18 +18,18 @@
             <TabControl TabStripPlacement="Top" SelectedIndex="{Binding TabIndex, Mode=TwoWay}"
                         Style="{StaticResource SubTabControlStyle}" x:Name="TabControl">
 
-                <TabItem Header="Dati generali" Style="{StaticResource SubTabItemStyle}"
-                         DataContext="{Binding DatiGeneraliDocumentoViewModel}"
+                <TabItem Header="Dati documento" Style="{StaticResource SubTabItemStyle}"
                          PreviewMouseLeftButtonDown="UIElement_OnPreviewMouseLeftButtonDown">
-                    
-                    <Grid>
 
-                        <t:InstanceNullManager BindedInstance="{Binding CurrentPoco}"
+                    <Grid >
+
+                        <t:InstanceNullManager BindedInstance="{Binding DatiGeneraliDocumentoViewModel.CurrentPoco}"
                                                EmptyMessage="Nessuna scheda dati generali presente"
                                                ActionCommandMessage="Aggiungi una scheda dati generali"
-                                               OnNullCommand="{Binding AddItemCommand}" />
+                                               OnNullCommand="{Binding DatiGeneraliDocumentoViewModel.AddItemCommand}" />
 
                         <Grid Margin="2,2,2,2" 
+                              DataContext="{Binding DatiGeneraliDocumentoViewModel}"
                               Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
                      
                             <Grid.Effect>
@@ -105,7 +105,9 @@
 
                             <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Margin="2,0,2,0">
                                 <TextBlock Text="Causale" />
-                                <TextBox   Text="{Binding CurrentPoco.Causale, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
+                                <TextBox   Text="{Binding CurrentPoco.Causale[0], UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" 
+                                           MaxLength="200"
+                                           HorizontalAlignment="Stretch" />
                             </StackPanel>
 
                             <t:SaveCancelRemoveButtons Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Left"
