--- a/FaPA/GUI/Design/Templates/AltriDatiGrid.xaml
+++ b/FaPA/GUI/Design/Templates/AltriDatiGrid.xaml
@@ -18,7 +18,7 @@
                                 Visibility="{Binding Path=IsEmpty, Converter={StaticResource BoolToVisibilityConverter},Mode=OneWay}"
                                 EmptyMessage="Nessuna scheda altri dati presente"
                                 ActionCommandMessage="Aggiungi una scheda altri dati"
-                                OnNullCommand="{Binding AddItemCommand}"
+                                OnAddEnterCommand="{Binding AddItemCommand}"
                                 ActionCommandParam="DatiTrasporto"/>
 
         <DockPanel Grid.Row="1">
