--- a/FaPA/GUI/Design/Templates/DatiGenerali.xaml
+++ b/FaPA/GUI/Design/Templates/DatiGenerali.xaml
@@ -23,7 +23,7 @@
                                                BindedInstance="{Binding DatiFatturaPrincipaleViewModel.CurrentPoco}"
                                                EmptyMessage="Nessuna scheda fattura principale presente"
                                                ActionCommandMessage="Aggiungi una scheda fattura principale"
-                                               OnNullCommand="{Binding DatiFatturaPrincipaleViewModel.AddItemCommand}" 
+                                               OnAddEnterCommand="{Binding DatiFatturaPrincipaleViewModel.AddItemCommand}" 
                                                ActionCommandParam="FatturaPrincipale"/>
 
                         <Grid Visibility="{Binding DatiFatturaPrincipaleViewModel.CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
@@ -62,22 +62,24 @@
 
                 <TabItem Header="Trasporto" Style="{StaticResource SubTabItemStyle}">
 
-                    <Grid Margin="2,2,2,2"  DataContext="{Binding DatiTrasportoViewModel}">
+                    <ScrollViewer>
+                        <Grid Margin="2,2,2,2"  >
                         
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
                             <t:InstanceNullManager Grid.Row="0" Grid.ColumnSpan="2"
-                                               BindedInstance="{Binding CurrentPoco, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"
+                                               BindedInstance="{Binding DatiTrasportoViewModel.CurrentPoco, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"
                                                EmptyMessage="Nessuna scheda dati trasporto presente"
                                                ActionCommandMessage="Aggiungi una scheda dati trasporto"
-                                               OnNullCommand="{Binding AddItemCommand}"
+                                               OnAddEnterCommand="{Binding DatiTrasportoViewModel.AddItemCommand}"
                                                ActionCommandParam="DatiTrasporto"/>
-                        
-                        <ScrollViewer>
 
-                            <Grid Margin="2,2,2,2"  Grid.Row="0"
+
+
+                            <Grid Margin="2,2,2,2" 
+                                  DataContext="{Binding DatiTrasportoViewModel}"
                                   Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
                             
                                 <Grid.Effect>
@@ -120,7 +122,7 @@
                             </StackPanel>
 
                             <StackPanel  Grid.Row="1" Grid.Column="0" Margin="2,0,2,0" Width="Auto"  
-                                     HorizontalAlignment="Stretch" MinWidth="200" Grid.ColumnSpan="3">
+                                         HorizontalAlignment="Stretch" MinWidth="200" Grid.ColumnSpan="3">
                                 <TextBlock Text="Descrizione" />
                                 <TextBox   Text="{Binding CurrentPoco.Descrizione, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
                                            MaxLength="100" Margin="2,0,2,0"/>
@@ -180,7 +182,7 @@
                                                                    BindedInstance="{Binding CurrentPoco, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"
                                                                    EmptyMessage="Nessuna scheda dati anagrafici vettore presente"
                                                                    ActionCommandMessage="Aggiungi una scheda dati anagrafici vettore"
-                                                                   OnNullCommand="{Binding AddItemCommand}"
+                                                                   OnAddEnterCommand="{Binding AddItemCommand}"
                                                                    ActionCommandParam="DatiVettore"/>
 
                                                 <Grid Grid.Row="0" Grid.ColumnSpan="5" 
@@ -269,7 +271,7 @@
                                                                            BindedInstance="{Binding CurrentPoco, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"
                                                                            EmptyMessage="Nessuna scheda dati indirizzo presente"
                                                                            ActionCommandMessage="Aggiungi una scheda dati indirizzo"
-                                                                           OnNullCommand="{Binding AddItemCommand}"
+                                                                           OnAddEnterCommand="{Binding AddItemCommand}"
                                                                            ActionCommandParam="IndirizzoResa"/>
 
                                                     <Grid Grid.Row="0" Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}"
@@ -343,9 +345,9 @@
                                                     SaveCommand="{Binding SaveEntity}"
                                                     PerformCancelCommand="{Binding PerformCancel}"/>
                             </Grid>
-                        </ScrollViewer>
+
                     </Grid>
-           
+                    </ScrollViewer>
                 </TabItem>
 
                 <TabItem Header="SAL" Style="{StaticResource SubTabItemStyle}">
@@ -356,7 +358,7 @@
                                                BindedInstance="{Binding CurrentPoco}"
                                                EmptyMessage="Nessuna scheda dati SAL presente"
                                                ActionCommandMessage="Aggiungi una scheda dati SAL"
-                                               OnNullCommand="{Binding AddItemCommand}" 
+                                               OnAddEnterCommand="{Binding AddItemCommand}" 
                                                ActionCommandParam="DatiSAL"/>
                         
                         <Grid HorizontalAlignment="Stretch">
@@ -453,7 +455,7 @@
                                                BindedInstance="{Binding CurrentPoco, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"
                                                EmptyMessage="Nessuna scheda dati DDT presente"
                                                ActionCommandMessage="Aggiungi una scheda dati DDT"
-                                               OnNullCommand="{Binding AddItemCommand}" />
+                                               OnAddEnterCommand="{Binding AddItemCommand}" />
 
                         <Grid HorizontalAlignment="Stretch" 
                               Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
